# file-quaternion-publisher

./: .gitignore  README.md  esegui_tf.sh  f_amir_mono_veloce_backup.txt  f_freq_aumentata.txt  f_tre_giri_7_marzo.txt  genera_tutte_px.sh  quat_effettivi_amir_mono_veloce.txt  tf_transform.rviz  visualizza_odom.rviz
src/file_quaternion_publisher/: CMakeLists.txt  package.xml
src/file_quaternion_publisher/src/: check_odometry_uguale.cpp  file_quaternion_publisher.cpp  from_ros2_images_compressed_imu_to_png_csv.cpp  from_ros2_images_imu_to_png_csv.cpp  publish_tf_transform.cpp  salva_immagini.cpp  tf_listener.cpp
src/mostra_img/: CMakeLists.txt  package.xml
src/mostra_img/src/: mostra_img.cpp
